validaciones Try & Catch

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "banco_solar",
     "version": "1.0.0",
-    "description": "",
+    "description": " Banco Solar Evaluacin Modulo 7",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
